fix item content overflow

--- a/web/styles.css
+++ b/web/styles.css
@@ -101,7 +101,6 @@ body,
 #root,
 #root > .bp5-card {
 	height: 100%;
-	min-width: fit-content;
 }
 
 /* top bar */
